# gladia

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  build_docker  gpu.Dockerfile  requirements.txt  requirements.txt.cpu  run_apis.sh  todo.todo
.circleci/: config.yml
.github/: labeler.yml  mergify.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: codeql-analysis.yml  gladia-base-builder.yml  gladia-builder.yml  gladia-dh-push.yml  gladia-latest-deploy.yml  pr-labeler.yml  pr-linter.yml
api/: Dockerfile  Dockerfile.dev  build_and_dev  build_and_dev.sh  build_and_prod  build_and_prod.sh  build_and_push  build_and_push.sh  build_and_run.sh  build_docker.sh  config.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  gpu.Dockerfile  gpu.Dockerfile.dev  gpu.Dockerfile.full  gpu.Dockerfile.prod  gunicorn.py  main.py  requirements.txt  run.sh  todo.todo
api/letsencrypt/: acme.json
api/traefik/prod/: traefik.toml
api/unit-test/: openapi.json  run-test.sh
gradio/: sota.py
hooks/: build
proxy/: revproxy.go  run.sh
sdk/clients/ada/: defaultpackage.gpr
sdk/clients/android/: README.md
sdk/clients/apex/: README.md
sdk/clients/bash/: Dockerfile  README.md  _client.sh  client.sh  client.sh.bash-completion
sdk/clients/c/: CMakeLists.txt  README.md
sdk/clients/c/api/: DefaultAPI.c  DefaultAPI.h  ImageImageBackgroundRemovalAPI.c  ImageImageBackgroundRemovalAPI.h  ImageImageColorizationAPI.c  ImageImageColorizationAPI.h  ImageImageFaceBluringAPI.c  ImageImageFaceBluringAPI.h  ImageImageRestorationAPI.c  ImageImageRestorationAPI.h  ImageImageSuperResolutionAPI.c  ImageImageSuperResolutionAPI.h  ImageImageUncolorizationAPI.c  ImageImageUncolorizationAPI.h  TextTextAutocorrectAPI.c  TextTextAutocorrectAPI.h  TextTextBooleanQuestionGenerationAPI.c  TextTextBooleanQuestionGenerationAPI.h  TextTextDependencyTrackingAPI.c  TextTextDependencyTrackingAPI.h  TextTextEmotionRecognitionAPI.c  TextTextEmotionRecognitionAPI.h  TextTextEntityExtractionAPI.c  TextTextEntityExtractionAPI.h  TextTextHateSpeechDetectionAPI.c  TextTextHateSpeechDetectionAPI.h  TextTextKeywordExtractionAPI.c  TextTextKeywordExtractionAPI.h  TextTextLanguageDetectionAPI.c  TextTextLanguageDetectionAPI.h  TextTextLanguageGenerationAPI.c  TextTextLanguageGenerationAPI.h  TextTextLemmatizationAPI.c  TextTextLemmatizationAPI.h  TextTextNamedEntityRecognitionAPI.c  TextTextNamedEntityRecognitionAPI.h  TextTextNextSentencePredictionAPI.c  TextTextNextSentencePredictionAPI.h  TextTextNextWordPredictionAPI.c  TextTextNextWordPredictionAPI.h  (+28 more)
sdk/clients/c/model/: body_apply_image_image_background_removal__post.c  body_apply_image_image_background_removal__post.h  body_apply_image_image_colorization__post.c  body_apply_image_image_colorization__post.h  body_apply_image_image_face_bluring__post.c  body_apply_image_image_face_bluring__post.h  body_apply_image_image_restoration__post.c  body_apply_image_image_restoration__post.h  body_apply_image_image_super_resolution__post.c  body_apply_image_image_super_resolution__post.h  body_apply_image_image_uncolorization__post.c  body_apply_image_image_uncolorization__post.h  http_validation_error.c  http_validation_error.h  validation_error.c  validation_error.h
sdk/clients/clojure/: project.clj
sdk/clients/cpp-restsdk/: ApiClient.cpp  ApiClient.h  ApiConfiguration.cpp  ApiConfiguration.h  ApiException.cpp  ApiException.h  CMakeLists.txt  HttpContent.cpp  HttpContent.h  IHttpBody.h  JsonBody.cpp  JsonBody.h  ModelBase.cpp  ModelBase.h  MultipartFormData.cpp  MultipartFormData.h  Object.cpp  Object.h  README.md
sdk/clients/csharp/: Org.OpenAPITools.sln  README.md
sdk/clients/csharp-dotnet2/: README.md
sdk/clients/csharp-netcore/: Org.OpenAPITools.sln  README.md
sdk/clients/dart/: README.md
sdk/clients/dart-jaguar/: README.md
sdk/clients/eiffel/: README.md  api_client.ecf
sdk/clients/elixir/: README.md  mix.exs
sdk/clients/elm/: README.md
sdk/clients/go/: README.md  (+45 more)
sdk/generator/: generate_sdk.py  generate_sdk.sh  get_all_languages.py  languages.txt
src/: .dockerignore  README.md  _activate_current_env.sh  _dockerfile_shell.sh  _entrypoint.sh  base.Dockerfile  build_and_dev  build_and_prod  build_and_push  clean-layer.sh  clean_python_cache.sh  config.json  default_custom_env_packages.txt  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  entrypoint.sh  env.yaml  gpu.Dockerfile  howto101.md  licenses-used.md  main.py  mamba.conf  replace_outpur.py  requirements.txt  run_fastapi_server.sh  run_server.sh  run_server_prod.sh  scaffold-model.py  setup_custom_envs.py  warm_up.py
src/api_utils/: setup.py
src/apis/: .metadata_model_template.yaml  run_docker.sh
src/tools/: run_ci_pr.py
src/unit-test/: config.json  coucou.txt  generate-tests.sh  install.sh  latency_analyse.py  latency_diagnostic.csv  latency_diagnostic.json  one-shot-test.py  requirements.txt  test.m4a  test.py  test2.py  upload-test.py  upload_test.py
src/venv-builder/: README.md  create_custom_envs.py  create_default_envs.py  default_common_packages.txt  default_image_packages.txt  default_text_packages.txt  setup_custom_envs.py  utils.py
streamlit/: Dockerfile  app.py  requirements.txt  streamlit.py
(+2784 files in other folders)
